parserNuestro.output
Terminals unused in grammar

    CONSTANTE_TK
    LLAVE_APERTURA_TK
    LLAVE_CIERRE_TK
    COMENTARIO_TK


State 90 conflicts: 3 reduce/reduce


Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: ALGORITMO_TK ID_TK PUNTOYCOMA_TK cabecera_alg bloque_alg FALGORITMO_TK PUNTO_TK

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal PRECONDICION_TK

    3 bloque_alg: bloque POSTCONDICION_TK

    4 decl_globales: declaracion_tipo decl_globales
    5              | ε

    6 decl_a_f: accion_d decl_a_f
    7         | funcion_d decl_a_f
    8         | ε

    9 bloque: declaraciones instrucciones

   10 declaraciones: declaracion_tipo declaraciones
   11              | declaracion_const declaraciones
   12              | declaracion_var declaraciones
   13              | ε

   14 decl_ent_sal: decl_ent
   15             | decl_ent decl_salida
   16             | decl_salida

   17 decl_ent: ENT_TK lista_d_var

   18 decl_salida: SAL_TK lista_d_var

   19 declaracion_tipo: TIPO_TK lista_d_tipo FTIPO_TK PUNTOYCOMA_TK

   20 declaracion_const: CONST_TK lista_d_const FCONST_TK PUNTOYCOMA_TK

   21 declaracion_var: VAR_TK lista_d_var FVAR_TK PUNTOYCOMA_TK

   22 lista_d_tipo: ID_TK IGUAL_TK d_tipo PUNTOYCOMA_TK lista_d_tipo
   23             | IDBOOLEANO_TK IGUAL_TK d_tipo PUNTOYCOMA_TK lista_d_tipo
   24             | ε

   25 lista_d_const: ID_TK IGUAL_TK literal PUNTOYCOMA_TK lista_d_const
   26              | IDBOOLEANO_TK IGUAL_TK literal PUNTOYCOMA_TK lista_d_const
   27              | ε

   28 literal: LITERAL_BOOLEANO_TK
   29        | LITERAL_CADENA_TK
   30        | LITERAL_CARACTER_TK
   31        | LITERAL_ENTERO_TK
   32        | LITERAL_REAL_TK

   33 lista_d_var: lista_id DOSPUNTOS_TK d_tipo PUNTOYCOMA_TK lista_d_var
   34            | ε

   35 lista_id: ID_TK
   36         | ID_TK COMA_TK lista_id
   37         | IDBOOLEANO_TK
   38         | IDBOOLEANO_TK COMA_TK lista_id

   39 d_tipo: TUPLA_TK lista_campos FTUPLA_TK
   40       | TABLA_TK INICIO_ARRAY_TK expresion_t DOBLEPUNTO_TK expresion_t CIERRE_ARRAY_TK DE_TK d_tipo
   41       | ID_TK
   42       | expresion_t DOBLEPUNTO_TK expresion_t
   43       | REF_TK d_tipo
   44       | tipo_base

   45 expresion_t: expresion
   46            | literal

   47 lista_campos: ID_TK DOSPUNTOS_TK d_tipo PUNTOYCOMA_TK lista_campos
   48             | ε

   49 tipo_base: ENTERO_TK
   50          | BOOLEANO_TK
   51          | CARACTER_TK
   52          | REAL_TK
   53          | CADENA_TK

   54 expresion: exp_b
   55          | exp_a
   56          | funcion_ll

   57 exp_a: exp_a MAS_TK exp_a
   58      | exp_a MENOS_TK exp_a
   59      | exp_a MULTIPLICACION_TK exp_a
   60      | exp_a DIVREAL_TK exp_a
   61      | exp_a MOD_TK exp_a
   62      | exp_a DIV_TK exp_a
   63      | PARENTESIS_APERTURA_TK exp_a PARENTESIS_CIERRE_TK
   64      | operando
   65      | MENOS_TK exp_a
   66      | MAS_TK exp_a

   67 exp_b: exp_b Y_TK exp_b
   68      | exp_b O_TK exp_b
   69      | NO_TK exp_b
   70      | operando_booleano
   71      | VERDADERO_TK
   72      | FALSO_TK
   73      | exp_a oprel exp_a
   74      | PARENTESIS_APERTURA_TK exp_b PARENTESIS_CIERRE_TK

   75 oprel: MENOR_TK
   76      | MAYOR_TK
   77      | IGUAL_TK
   78      | DISTINTO_TK
   79      | MAYORIGUAL_TK
   80      | MENORIGUAL_TK

   81 operando: ID_TK
   82         | operando PUNTO_TK ID_TK
   83         | operando INICIO_ARRAY_TK expresion CIERRE_ARRAY_TK
   84         | operando REF_TK
   85         | literal

   86 operando_booleano: IDBOOLEANO_TK

   87 instrucciones: instruccion PUNTOYCOMA_TK instrucciones
   88              | instruccion

   89 instruccion: CONTINUAR_TK
   90            | asignacion
   91            | alternativa
   92            | iteracion
   93            | accion_ll

   94 asignacion: operando ASIGNACION_TK expresion
   95           | operando_booleano ASIGNACION_TK expresion

   96 alternativa: SI_TK expresion ENTONCES_TK instrucciones lista_opciones FSI_TK

   97 lista_opciones: SINO_SI_TK expresion ENTONCES_TK instrucciones lista_opciones
   98               | ε

   99 iteracion: it_cota_fija
  100          | it_cota_exp

  101 it_cota_fija: MIENTRAS_TK expresion HACER_TK instrucciones FMIENTRAS_TK

  102 it_cota_exp: PARA_TK ID_TK ASIGNACION_TK expresion HASTA_TK expresion HACER_TK instrucciones FPARA_TK

  103 accion_d: ACCION_TK a_cabecera bloque FACCION_TK

  104 funcion_d: FUNCION_TK f_cabecera bloque DEV_TK expresion FFUNCION_TK

  105 a_cabecera: ID_TK PARENTESIS_APERTURA_TK d_par_form PARENTESIS_CIERRE_TK PUNTOYCOMA_TK

  106 f_cabecera: ID_TK PARENTESIS_APERTURA_TK lista_d_var PARENTESIS_CIERRE_TK DEV_TK d_tipo PUNTOYCOMA_TK

  107 d_par_form: d_p_form PUNTOYCOMA_TK d_par_form
  108           | ε

  109 d_p_form: ENT_TK lista_id DOSPUNTOS_TK d_tipo
  110         | SAL_TK lista_id DOSPUNTOS_TK d_tipo
  111         | E_S_TK lista_id DOSPUNTOS_TK d_tipo

  112 accion_ll: ID_TK PARENTESIS_APERTURA_TK l_ll PARENTESIS_CIERRE_TK

  113 funcion_ll: ID_TK PARENTESIS_APERTURA_TK l_ll PARENTESIS_CIERRE_TK

  114 l_ll: expresion
  115     | expresion COMA_TK l_ll


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    MAS_TK (258) 57 66
    MENOS_TK (259) 58 65
    ID_TK <cadena> (260) 1 22 25 35 36 41 47 81 82 102 105 106 112 113
    IDBOOLEANO_TK <cadena> (261) 23 26 37 38 86
    CONSTANTE_TK <cadena> (262)
    LITERAL_BOOLEANO_TK <literal> (263) 28
    LITERAL_ENTERO_TK <literal> (264) 31
    LITERAL_REAL_TK <literal> (265) 32
    LITERAL_CADENA_TK <literal> (266) 29
    LITERAL_CARACTER_TK <literal> (267) 30
    ACCION_TK (268) 103
    ALGORITMO_TK (269) 1
    BOOLEANO_TK (270) 50
    CADENA_TK (271) 53
    CARACTER_TK (272) 51
    CONST_TK (273) 20
    CONTINUAR_TK (274) 89
    DE_TK (275) 40
    DEV_TK (276) 104 106
    DIV_TK (277) 62
    ENT_TK (278) 17 109
    ENTERO_TK (279) 49
    E_S_TK (280) 111
    FACCION_TK (281) 103
    FALGORITMO_TK (282) 1
    FALSO_TK (283) 72
    FCONST_TK (284) 20
    FFUNCION_TK (285) 104
    FMIENTRAS_TK (286) 101
    FPARA_TK (287) 102
    FSI_TK (288) 96
    FTIPO_TK (289) 19
    FTUPLA_TK (290) 39
    FUNCION_TK (291) 104
    FVAR_TK (292) 21
    HACER_TK (293) 101 102
    HASTA_TK (294) 102
    MIENTRAS_TK (295) 101
    MOD_TK (296) 61
    NO_TK (297) 69
    O_TK (298) 68
    PARA_TK (299) 102
    REAL_TK (300) 52
    REF_TK (301) 43 84
    SAL_TK (302) 18 110
    SI_TK (303) 96
    TABLA_TK (304) 40
    TIPO_TK (305) 19
    TUPLA_TK (306) 39
    VAR_TK (307) 21
    VERDADERO_TK (308) 71
    Y_TK (309) 67
    PRECONDICION_TK (310) 2
    POSTCONDICION_TK (311) 3
    ASIGNACION_TK (312) 94 95 102
    PUNTOYCOMA_TK (313) 1 19 20 21 22 23 25 26 33 47 87 105 106 107
    DOSPUNTOS_TK (314) 33 47 109 110 111
    ENTONCES_TK (315) 96 97
    SINO_SI_TK (316) 97
    IGUAL_TK (317) 22 23 25 26 77
    INICIO_ARRAY_TK (318) 40 83
    CIERRE_ARRAY_TK (319) 40 83
    MULTIPLICACION_TK (320) 59
    DIVREAL_TK (321) 60
    MAYORIGUAL_TK (322) 79
    MENORIGUAL_TK (323) 80
    MAYOR_TK (324) 76
    MENOR_TK (325) 75
    DISTINTO_TK (326) 78
    COMA_TK (327) 36 38 115
    LLAVE_APERTURA_TK (328)
    LLAVE_CIERRE_TK (329)
    PUNTO_TK (330) 1 82
    DOBLEPUNTO_TK (331) 40 42
    PARENTESIS_APERTURA_TK (332) 63 74 105 106 112 113
    PARENTESIS_CIERRE_TK (333) 63 74 105 106 112 113
    COMENTARIO_TK (334)
    NEG_TK (335)
    POS_TK (336)


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    desc_algoritmo (83)
        on left: 1
        on right: 0
    cabecera_alg (84)
        on left: 2
        on right: 1
    bloque_alg (85)
        on left: 3
        on right: 1
    decl_globales (86)
        on left: 4 5
        on right: 2 4
    decl_a_f (87)
        on left: 6 7 8
        on right: 2 6 7
    bloque (88)
        on left: 9
        on right: 3 103 104
    declaraciones (89)
        on left: 10 11 12 13
        on right: 9 10 11 12
    decl_ent_sal (90)
        on left: 14 15 16
        on right: 2
    decl_ent (91)
        on left: 17
        on right: 14 15
    decl_salida (92)
        on left: 18
        on right: 15 16
    declaracion_tipo (93)
        on left: 19
        on right: 4 10
    declaracion_const (94)
        on left: 20
        on right: 11
    declaracion_var (95)
        on left: 21
        on right: 12
    lista_d_tipo (96)
        on left: 22 23 24
        on right: 19 22 23
    lista_d_const (97)
        on left: 25 26 27
        on right: 20 25 26
    literal <literal> (98)
        on left: 28 29 30 31 32
        on right: 25 26 46 85
    lista_d_var <lista_ids> (99)
        on left: 33 34
        on right: 17 18 21 33 106
    lista_id <lista_ids> (100)
        on left: 35 36 37 38
        on right: 33 36 38 109 110 111
    d_tipo <tipo> (101)
        on left: 39 40 41 42 43 44
        on right: 22 23 33 40 43 47 106 109 110 111
    expresion_t (102)
        on left: 45 46
        on right: 40 42
    lista_campos (103)
        on left: 47 48
        on right: 39 47
    tipo_base <tipo> (104)
        on left: 49 50 51 52 53
        on right: 44
    expresion <id_simbolo> (105)
        on left: 54 55 56
        on right: 45 83 94 95 96 97 101 102 104 114 115
    exp_a <id_simbolo> (106)
        on left: 57 58 59 60 61 62 63 64 65 66
        on right: 55 57 58 59 60 61 62 63 65 66 73
    exp_b <id_simbolo> (107)
        on left: 67 68 69 70 71 72 73 74
        on right: 54 67 68 69 74
    oprel <id_simbolo> (108)
        on left: 75 76 77 78 79 80
        on right: 73
    operando <id_simbolo> (109)
        on left: 81 82 83 84 85
        on right: 64 82 83 84 94
    operando_booleano <id_simbolo> (110)
        on left: 86
        on right: 70 95
    instrucciones (111)
        on left: 87 88
        on right: 9 87 96 97 101 102
    instruccion (112)
        on left: 89 90 91 92 93
        on right: 87 88
    asignacion (113)
        on left: 94 95
        on right: 90
    alternativa (114)
        on left: 96
        on right: 91
    lista_opciones (115)
        on left: 97 98
        on right: 96 97
    iteracion (116)
        on left: 99 100
        on right: 92
    it_cota_fija (117)
        on left: 101
        on right: 99
    it_cota_exp (118)
        on left: 102
        on right: 100
    accion_d (119)
        on left: 103
        on right: 6
    funcion_d (120)
        on left: 104
        on right: 7
    a_cabecera (121)
        on left: 105
        on right: 103
    f_cabecera (122)
        on left: 106
        on right: 104
    d_par_form (123)
        on left: 107 108
        on right: 105 107
    d_p_form (124)
        on left: 109 110 111
        on right: 107
    accion_ll (125)
        on left: 112
        on right: 93
    funcion_ll (126)
        on left: 113
        on right: 56
    l_ll (127)
        on left: 114 115
        on right: 112 113 115


State 0

    0 $accept: • desc_algoritmo $end

    ALGORITMO_TK  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: ALGORITMO_TK • ID_TK PUNTOYCOMA_TK cabecera_alg bloque_alg FALGORITMO_TK PUNTO_TK

    ID_TK  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: ALGORITMO_TK ID_TK • PUNTOYCOMA_TK cabecera_alg bloque_alg FALGORITMO_TK PUNTO_TK

    PUNTOYCOMA_TK  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end •

    $default  accept


State 5

    1 desc_algoritmo: ALGORITMO_TK ID_TK PUNTOYCOMA_TK • cabecera_alg bloque_alg FALGORITMO_TK PUNTO_TK

    TIPO_TK  shift, and go to state 6

    $default  reduce using rule 5 (decl_globales)

    cabecera_alg      go to state 7
    decl_globales     go to state 8
    declaracion_tipo  go to state 9


State 6

   19 declaracion_tipo: TIPO_TK • lista_d_tipo FTIPO_TK PUNTOYCOMA_TK

    ID_TK          shift, and go to state 10
    IDBOOLEANO_TK  shift, and go to state 11

    $default  reduce using rule 24 (lista_d_tipo)

    lista_d_tipo  go to state 12


State 7

    1 desc_algoritmo: ALGORITMO_TK ID_TK PUNTOYCOMA_TK cabecera_alg • bloque_alg FALGORITMO_TK PUNTO_TK

    CONST_TK  shift, and go to state 13
    TIPO_TK   shift, and go to state 6
    VAR_TK    shift, and go to state 14

    $default  reduce using rule 13 (declaraciones)

    bloque_alg         go to state 15
    bloque             go to state 16
    declaraciones      go to state 17
    declaracion_tipo   go to state 18
    declaracion_const  go to state 19
    declaracion_var    go to state 20


State 8

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal PRECONDICION_TK

    ACCION_TK   shift, and go to state 21
    FUNCION_TK  shift, and go to state 22

    $default  reduce using rule 8 (decl_a_f)

    decl_a_f   go to state 23
    accion_d   go to state 24
    funcion_d  go to state 25


State 9

    4 decl_globales: declaracion_tipo • decl_globales

    TIPO_TK  shift, and go to state 6

    $default  reduce using rule 5 (decl_globales)

    decl_globales     go to state 26
    declaracion_tipo  go to state 9


State 10

   22 lista_d_tipo: ID_TK • IGUAL_TK d_tipo PUNTOYCOMA_TK lista_d_tipo

    IGUAL_TK  shift, and go to state 27


State 11

   23 lista_d_tipo: IDBOOLEANO_TK • IGUAL_TK d_tipo PUNTOYCOMA_TK lista_d_tipo

    IGUAL_TK  shift, and go to state 28


State 12

   19 declaracion_tipo: TIPO_TK lista_d_tipo • FTIPO_TK PUNTOYCOMA_TK

    FTIPO_TK  shift, and go to state 29


State 13

   20 declaracion_const: CONST_TK • lista_d_const FCONST_TK PUNTOYCOMA_TK

    ID_TK          shift, and go to state 30
    IDBOOLEANO_TK  shift, and go to state 31

    $default  reduce using rule 27 (lista_d_const)

    lista_d_const  go to state 32


State 14

   21 declaracion_var: VAR_TK • lista_d_var FVAR_TK PUNTOYCOMA_TK

    ID_TK          shift, and go to state 33
    IDBOOLEANO_TK  shift, and go to state 34

    $default  reduce using rule 34 (lista_d_var)

    lista_d_var  go to state 35
    lista_id     go to state 36


State 15

    1 desc_algoritmo: ALGORITMO_TK ID_TK PUNTOYCOMA_TK cabecera_alg bloque_alg • FALGORITMO_TK PUNTO_TK

    FALGORITMO_TK  shift, and go to state 37


State 16

    3 bloque_alg: bloque • POSTCONDICION_TK

    POSTCONDICION_TK  shift, and go to state 38


State 17

    9 bloque: declaraciones • instrucciones

    ID_TK                shift, and go to state 39
    IDBOOLEANO_TK        shift, and go to state 40
    LITERAL_BOOLEANO_TK  shift, and go to state 41
    LITERAL_ENTERO_TK    shift, and go to state 42
    LITERAL_REAL_TK      shift, and go to state 43
    LITERAL_CADENA_TK    shift, and go to state 44
    LITERAL_CARACTER_TK  shift, and go to state 45
    CONTINUAR_TK         shift, and go to state 46
    MIENTRAS_TK          shift, and go to state 47
    PARA_TK              shift, and go to state 48
    SI_TK                shift, and go to state 49

    literal            go to state 50
    operando           go to state 51
    operando_booleano  go to state 52
    instrucciones      go to state 53
    instruccion        go to state 54
    asignacion         go to state 55
    alternativa        go to state 56
    iteracion          go to state 57
    it_cota_fija       go to state 58
    it_cota_exp        go to state 59
    accion_ll          go to state 60


State 18

   10 declaraciones: declaracion_tipo • declaraciones

    CONST_TK  shift, and go to state 13
    TIPO_TK   shift, and go to state 6
    VAR_TK    shift, and go to state 14

    $default  reduce using rule 13 (declaraciones)

    declaraciones      go to state 61
    declaracion_tipo   go to state 18
    declaracion_const  go to state 19
    declaracion_var    go to state 20


State 19

   11 declaraciones: declaracion_const • declaraciones

    CONST_TK  shift, and go to state 13
    TIPO_TK   shift, and go to state 6
    VAR_TK    shift, and go to state 14

    $default  reduce using rule 13 (declaraciones)

    declaraciones      go to state 62
    declaracion_tipo   go to state 18
    declaracion_const  go to state 19
    declaracion_var    go to state 20


State 20

   12 declaraciones: declaracion_var • declaraciones

    CONST_TK  shift, and go to state 13
    TIPO_TK   shift, and go to state 6
    VAR_TK    shift, and go to state 14

    $default  reduce using rule 13 (declaraciones)

    declaraciones      go to state 63
    declaracion_tipo   go to state 18
    declaracion_const  go to state 19
    declaracion_var    go to state 20


State 21

  103 accion_d: ACCION_TK • a_cabecera bloque FACCION_TK

    ID_TK  shift, and go to state 64

    a_cabecera  go to state 65


State 22

  104 funcion_d: FUNCION_TK • f_cabecera bloque DEV_TK expresion FFUNCION_TK

    ID_TK  shift, and go to state 66

    f_cabecera  go to state 67


State 23

    2 cabecera_alg: decl_globales decl_a_f • decl_ent_sal PRECONDICION_TK

    ENT_TK  shift, and go to state 68
    SAL_TK  shift, and go to state 69

    decl_ent_sal  go to state 70
    decl_ent      go to state 71
    decl_salida   go to state 72


State 24

    6 decl_a_f: accion_d • decl_a_f

    ACCION_TK   shift, and go to state 21
    FUNCION_TK  shift, and go to state 22

    $default  reduce using rule 8 (decl_a_f)

    decl_a_f   go to state 73
    accion_d   go to state 24
    funcion_d  go to state 25


State 25

    7 decl_a_f: funcion_d • decl_a_f

    ACCION_TK   shift, and go to state 21
    FUNCION_TK  shift, and go to state 22

    $default  reduce using rule 8 (decl_a_f)

    decl_a_f   go to state 74
    accion_d   go to state 24
    funcion_d  go to state 25


State 26

    4 decl_globales: declaracion_tipo decl_globales •

    $default  reduce using rule 4 (decl_globales)


State 27

   22 lista_d_tipo: ID_TK IGUAL_TK • d_tipo PUNTOYCOMA_TK lista_d_tipo
